# vote-rs

./: Cargo.toml  README.md  docker-compose.yml
.claude/: settings.local.json
.sqlx/: query-7fe22fd44ee6977d0eccf598ae2cdf52a83521205af09f904f8dff9a1909a47b.json  query-c7cc1282ea63938c726e0cb2fc701026de8563798e527653f5420886846a895a.json
migrations/: 20251231060243_init_schema.sql
src/: db.rs  main.rs
src/api/: agenda.rs  error.rs  mod.rs
src/api/agenda/: dtos.rs  handlers.rs  mod.rs  service.rs
src/api/agenda/repository/: create.rs  mod.rs  traits.rs
src/api/agenda/test/: create.rs  mod.rs
src/api/auth/: dtos.rs  error.rs  handlers.rs  jwt.rs  mod.rs  repository.rs  repository_trait.rs  service.rs  service_test.rs  test.rs
src/api/auth/repository/: login.rs  mod.rs  signup.rs  traits.rs
src/api/auth/test/: login.rs  mod.rs  signup.rs
